<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dnerd.dipty.emptyinbox.SignUpActivity">



    <EditText
        android:id="@+id/emailField"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/emailField" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordField"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField" />
</RelativeLayout>
